# Covid-vCues

./: MMreliableUrls.txt  MMreliableUrls1.txt  MMunreliableUrls.txt  MMunreliableUrls1.txt  NewsFakeUrl.txt  README.md  mmparser.py  notes.txt  outputFake.txt  parser.py  parser_mm.py  pyproject.toml  recovery.py  reliableUrls.txt  reliable_v_unreliable.py  unreliableUrls.txt
CoAID urls/: TweetFakeUrl.txt
Data Cleaning/: blur_detection.py
ReCoVery urls/: UtweetUrls.txt  unreliableUrls.txt
SVM model/: svm_model.py
clean_dataset/: clean_data.py  pyproject.toml
clean_dataset/reports/: atrain_features.bad.csv  atrain_features.dat.csv  atrain_stats.csv  component_info.csv  config.json  connected_components.csv  duplicates.html  outliers.csv  similarity.csv
covid_crawler/: scrapy.cfg
covid_crawler/covid_crawler/: items.py  middlewares.py  pipelines.py  settings.py
covid_crawler/covid_crawler/spiders/: reliable_spider.py  unreliable_spider.py
covid_crawler/crawler/: items.py  middlewares.py  pipelines.py  settings.py
covidcrawler/: scrapy.cfg
covidcrawler/covidcrawler/: settings.py
covidcrawler/covidcrawler/spiders/: spider1.py  spider2.py  spider3.py
data_cleaning/: face_recognition.py  resolution_detection.py  svm_model.py
large_news_model/: reliable_unreliable.py  remove_duplicate.py  test_model.py
large_news_model/logs/train/: events.out.tfevents.1718422256.archlinux.43805.0.v2  (+3 more)
model1/: reliable_unreliable.py
urls/: NewsRealUrl.txt
urls_MM/: MMreliableUrls3.txt  MMunreliableUrls3.txt
urls_recovery/: reliableUrls.txt
(+5 files in other folders)
