[tool.poetry]
name = "covidcrawler"
version = "0.1.0"
description = ""
authors = ["Sarah Ogden <sarahogden2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Scrapy = "^2.11.1"
pillow = "^10.3.0"
keras = "^3.3.3"
keras-preprocessing = "^1.1.2"
scipy = "^1.13.1"
numpy = "^1.26.4"
imutils = "^0.5.4"
opencv-python = "^4.10.0.82"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
